# production_line_simulation

./: CMakeLists.txt  README.md  main.cpp  plik.txt  report_simulation.txt  report_simulation2.txt  saved.txt  struct-input.txt
googletest-master/googletest/include/gtest/internal/: gtest-internal.h
include/: factory.hpp  helpers.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp  types.cpp
test/: test_factory_nasze.cpp  test_nodes_nasze.cpp  test_package_nasze.cpp  test_storage_types_nasze.cpp
